--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@ body, h1, h2, h3, h4, h5, h6, form, input, ul, ol, li {
 body {
   font-family: "Microsoft YaHei",tahoma,arial,'Hiragino Sans GB','\5b8b\4f53',sans-serif;
   font-size: 16px;
-  color: #fff; }
+  color: #000; }
 
 a {
   color: #b0b0b0;
